# KylinX

./: README.md
code/kylin/: kylin.c
code/kylin/include/: SDL.h  SDL_atomic.h  SDL_bits.h  SDL_config.h  SDL_config_android.h  SDL_config_iphoneos.h  SDL_cpuinfo.h  SDL_events.h  SDL_main.h  SDL_opengles2.h  SDL_render.h  SDL_rwops.h  SDL_stdinc.h  SDL_system.h  SDL_syswm.h  SDL_thread.h  SDL_touch.h  SDL_video.h  begin_code.h  close_code.h
code/kylin/java/com/kylin/: KylinActivity.java
code/kylin/src/: SDL.c  SDL_assert.c  SDL_error.c  SDL_internal.h  SDL_log.c
code/kylin/src/atomic/: SDL_atomic.c
code/kylin/src/audio/: SDL_audio.c  SDL_audiocvt.c  SDL_audiotypecvt.c  SDL_mixer.c  SDL_sysaudio.h
code/kylin/src/core/android/: SDL_android.c  SDL_android.h
code/kylin/src/cpuinfo/: SDL_cpuinfo.c
code/kylin/src/events/: SDL_events.c  SDL_events_c.h  SDL_keyboard.c  SDL_touch.c  SDL_windowevents.c
code/kylin/src/file/: SDL_rwops.c
code/kylin/src/filesystem/cocoa/: SDL_sysfilesystem.m
code/kylin/src/power/: SDL_power.c  SDL_syspower.h
code/kylin/src/power/android/: SDL_syspower.c
code/kylin/src/power/uikit/: SDL_syspower.m
code/kylin/src/render/: SDL_render.c  SDL_sysrender.h  SDL_yuv_sw_c.h
code/kylin/src/render/opengles2/: SDL_gles2funcs.h  SDL_render_gles2.c  SDL_shaders_gles2.c  SDL_shaders_gles2.h
code/kylin/src/sensor/: SDL_sensor.c  SDL_syssensor.h
code/kylin/src/stdlib/: SDL_getenv.c  SDL_malloc.c  SDL_stdlib.c
code/kylin/src/thread/: SDL_systhread.h  SDL_thread.c  SDL_thread_c.h
code/kylin/src/thread/generic/: SDL_sysmutex.c  SDL_syssem.c  SDL_systhread.c
code/kylin/src/thread/pthread/: SDL_sysmutex.c  SDL_syssem.c  SDL_systhread.c
code/kylin/src/timer/unix/: SDL_systimer.c
code/kylin/src/video/: SDL_RLEaccel.c  SDL_blit.c  SDL_blit_A.c  SDL_blit_N.c  SDL_blit_copy.c  SDL_egl.c  SDL_egl_c.h  SDL_fillrect.c  SDL_stretch.c  SDL_sysvideo.h  SDL_video.c  SDL_yuv.c
code/kylin/src/video/android/: SDL_androidevents.c  SDL_androidtouch.c  SDL_androidvideo.c  SDL_androidwindow.c
player/android/app/: AndroidManifest.xml  CMakeLists.txt  build.gradle
player/android/app/res/values/: strings.xml
player/android/gradle/wrapper/: gradle-wrapper.properties
player/ios/kylin/: Info.plist
player/ios/kylin.xcodeproj/: project.pbxproj
(+16 files in other folders)
